kustomize/workload-provisioning/network-instance-protocol-bgpevpn0-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpevpn
metadata:
  name: provisioningMacVrfitfce0
  labels:
    target: leaf1
spec:
  network-instance-name: provisioningMacVrfitfce0
  bgp-evpn:
    bgp-instance:
      id: 1
      admin-state: enable
      ecmp: 8
      evi: 0
      vxlan-interface: vxlan0.0
