kustomize/workload-provisioning/network-instance-protocol-bgpvpn0-leaf1.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: provisioningmacvrfitfce0leaf1
  labels:
    target: leaf1
spec:
  network-instance-name: provisioningmacvrfitfce0
  bgp-vpn:
    bgp-instance:
    = id: 1
      route-target:
        export-rt: target:65002:0
        import-rt: target:65002:0
