kustomize/workload-provisioning/network-instance-protocol-bgpvpn0-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsBgpVpn
metadata:
  name: provisioningmacvrfitfce0leaf2
  labels:
    target: leaf2
spec:
  network-instance-name: provisioningmacvrfitfce0
  bgp-vpn:
    bgp-instance:
    - id: 1
      route-target:
        export-rt: target:65002:1
        import-rt: target:65002:1
