kustomize/workload-provisioning/network-instance-protocol-linux0-leaf2.yaml

apiVersion: srlinux.henderiw.be/v1alpha1
kind: K8sSrlNokiaNetworkInstanceNetworkInstanceProtocolsLinux
metadata:
  name: provisioningMacVrfitfce0
  labels:
    target: leaf2
spec:
  network-instance-name: provisioningMacVrfitfce0
  linux:
    export-neighbors: true
    export-routes: true
    import-routes: true
